test/cli/test/container_reorder/kyverno-test.yaml
name: test-image-verify-signature
policies:
- policy.yml
resources:
- resources.yaml
results:
- kind: Pod
  policy: check-image
  resources:
  - signed-first
  result: fail
  rule: verify-signature
- kind: Pod
  policy: check-image
  resources:
  - unsigned-first
  result: fail
  rule: verify-signature
