test/cli/test/container_reorder/policy.yml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: check-image
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: verify-signature
    validate: {}
    verifyImages:
    - attestors:
      - count: 1
        entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEFN8gGjQua2g8N+aLx3Eff+/j5HxL
[...]
              -----END PUBLIC KEY-----
            signatureAlgorithm: sha256
      imageReferences:
      - '*'
      mutateDigest: true
      required: true
      useCache: true
      verifyDigest: true
  validationFailureAction: Enforce
