test/cli/test/container_reorder/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-first
spec:
  containers:
    - name: signed
      image: ghcr.io/hackeramitkumar/test5:app
    - name: unsigned
      image: ghcr.io/hackeramitkumar/test6:app
---
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-first
spec:
  containers:
    - name: unsigned
      image: ghcr.io/hackeramitkumar/test6:app
    - name: signed
      image: ghcr.io/hackeramitkumar/test5:app
